--- a/src/pages/ru/welcome.html
+++ b/src/pages/ru/welcome.html
@@ -1,1 +1,15 @@
-<h1>Добро пожаловать</h1><p>Тестовый текст.</p>
+    <head>
+        <style>
+            h1 {
+                text-align: center;
+                font-size: 70px;
+                padding-bottom: 100px;
+                padding-top: 70px;
+            }
+            p {
+                font-size: 18px;
+            }
+        </style>
+    </head>
+<h1><strong>EndoVar</strong></h1>
+<p>Информация о базе данных</p>
