--- a/src/pages/ru/welcome.html
+++ b/src/pages/ru/welcome.html
@@ -12,4 +12,5 @@
         </style>
     </head>
 <h1><strong>EndoVar</strong></h1>
+<img src="C:\projects\EndoVar\data\logo.bmp">
 <p>Информация о базе данных</p>
