add logo, diagnosis for CNV in genes table

--- a/src/pages/ru/welcome.html
+++ b/src/pages/ru/welcome.html
@@ -11,6 +11,6 @@
             }
         </style>
     </head>
+<img src="https://raw.githubusercontent.com/genespace-ru/EndoVar/refs/heads/main/data/logo.png" alt="Логотип" height="400px" style="display: block; margin-left: auto; margin-right: auto;"> 
 <h1><strong>EndoVar</strong></h1>
-<img src="C:\projects\EndoVar\data\logo.bmp">
 <p>Информация о базе данных</p>
