add snvs with patients

--- a/src/pages/ru/welcome.html
+++ b/src/pages/ru/welcome.html
@@ -1,16 +1,12 @@
     <head>
         <style>
-            h1 {
-                text-align: center;
-                font-size: 70px;
+            img {
                 padding-bottom: 100px;
-                padding-top: 70px;
             }
             p {
                 font-size: 18px;
             }
         </style>
     </head>
-<img src="https://raw.githubusercontent.com/genespace-ru/EndoVar/refs/heads/main/data/endologo2.jpg" alt="Логотип" height="400px" style="display: block; margin-left: auto; margin-right: auto;"> 
-<h1><strong>EndoVar</strong></h1>
+<img src="https://raw.githubusercontent.com/genespace-ru/EndoVar/refs/heads/main/data/endologo2.jpg" alt="Логотип" height="500px" style="display: block; margin-left: auto; margin-right: auto;"> 
 <p>Информация о базе данных</p>
