--- a/src/pages/ru/welcome.html
+++ b/src/pages/ru/welcome.html
@@ -1,12 +1,13 @@
     <head>
         <style>
             img {
-                padding-bottom: 100px;
+                padding-bottom: 90px;
             }
             p {
                 font-size: 18px;
             }
         </style>
     </head>
-<img src="https://raw.githubusercontent.com/genespace-ru/EndoVar/refs/heads/main/data/endologo2.jpg" alt="Логотип" height="500px" style="display: block; margin-left: auto; margin-right: auto;"> 
-<p>Информация о базе данных</p>
+<img src="https://raw.githubusercontent.com/genespace-ru/EndoVar/refs/heads/main/data/endologo2.jpg" alt="Логотип" height="400px" style="display: block; margin-left: 50px; margin-right: auto;"> 
+<p>От варианта к функции — объединяем геномные данные для понимания эндокринных патологий</p>
+<p><strong>EndoVar</strong> — это высококачественная, курируемая база данных, централизующая информацию о генетических вариациях, связанных с эндокринными заболеваниями. Мы интегрируем данные о единичных нуклеотидных вариантах (SNV) и вариациях числа копий (CNV) с клиническими фенотипами пациентов, создавая мощный ресурс для исследователей, клинических генетиков и врачей-эндокринологов. </p>
